--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,11 @@
     <string name="your_age">Over 18?</string>
     <string name="button_new_account">CREATE ACCOUNT</string>
     <string name="existing_account">Already have an account?</string>
+
     <string name="title_activity_sign_up">SignUpActivity</string>
+    <string name="title_activity_home">HomeActivity</string>
+
+
+    <string name="profile_name">Susanna Hoffs</string>
+    <string name="rest_of_location">You`re in Paris</string>
 </resources>
