--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,11 @@
     <string name="title_activity_home">HomeActivity</string>
 
     // Strings da Terceira Tela
-    <string name="profile_name">Susanna Hoffs</string>
-    <string name="categories">Categories</string>
     <string name="rest_of_location">You`re in Paris</string>
     <string name="my_trips">My Trips</string>
+    <string name="categories">Categories</string>
+    <string name="search">Search your destiny</string>
+    <string name="past_trips">Past Trips</string>
 
     // Strings dos OutlinedTextField
 
